--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,39 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>Daily Random Wikipedia Article</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css"/>
-	<script src="js/jquery-1.8.2.min.js"></script>
-</head>
-<body>
-<form id="signup-box" action="/subscribe" method="post">
-	<fieldset>
-		<label for="signup-email">Sign to receive a random Wikipedia article daily:</label>  
-		<input type="text" name="signup-email" id="signup-email" name="signup-email">
-		<input type="submit" id="signup-button" value="Subscribe">
-		<p id="signup-response"></p> 
-	</fieldset>
-</form>
-</body>
+  <head>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<title>Daily Random Wikipedia Article</title>
+		<link rel="stylesheet" href="css/style.css">
+		<script src="js/jquery-1.8.2.min.js"></script>
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:700' rel='stylesheet' type='text/css'>
+
+	</head>
+	<body>
+		<div class="wrapper">
+            <div class="push"></div>
+			<div class = "entryBox">
+				<h2>*Random*<h2>
+				<h1>Daily Wikipedia</h1><br>
+				<ul>
+					<li>Become more <strong>sagacious</strong>!</li>
+					<li>Feel the <strong>envy</strong> of your friends!</li>
+					<li><strong>Win</strong> at life!</li>
+				</ul><br>
+				<div class = "signup">
+					<div class = "instruct"><h3> Sign Up!</h3></div>
+					<form id="signup-box" action="/subscribe" method="post">
+						<fieldset>
+							<label for="signup-email">Receive a random Wikipedia article daily:</label>  <br>
+							<input type="email" name="signup-email" id="signup-email" name="signup-email">
+							<input type="submit" id="signup-button" value="Subscribe">
+							<p id="signup-response"></p> 
+						</fieldset>
+					</form>
+				</div>
+			</div>
+        </div>
+        <div class="footer">
+            <p>Copyright (c) 2012 * Taylor Poulos and <a href = "http://www.tomzshen.com"> Tom Shen </a> * photo credit <a href = "http://bit.ly/9FT3Ju"> See-ming Lee </a> </p>
+        </div>
+    </body>
 </html>
