--- a/templates/unsub.html
+++ b/templates/unsub.html
@@ -3,12 +3,20 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Unsubscribed! - Daily Random Wikipedia Article</title>
-	<link rel="stylesheet" type="text/css" href="css/sub.css"/>
+	<link rel="stylesheet" type="text/css" href="css/style.css"/>
 	<script src="js/jquery-1.8.2.min.js"></script>
 </head>
 <body>
-	<p>
-		You've been successfully unsubscribed.
-	</p>
+		<div class="wrapper">
+	        <div class="push"></div>
+				<div class='entryBox'>
+					<p>
+						You've been successfully unsubscribed.
+					</p>
+				</div>
+	        </div>
+        <div class="footer">
+            <p>Copyright (c) 2012 * <a href = 'tpoulos.me'>Taylor Poulos</a> and <a href = "http://www.tomzshen.com"> Tom Shen </a> * photo credit <a href = "http://bit.ly/9FT3Ju"> See-ming Lee </a> </p>
+        </div>
 </body>
 </html>
